<resources>
    <string name="app_name">HTTP_Request_CRUD</string>
    <string name="nombreEditText">Nombre</string>
    <string name="apellidoEditText">Apellido</string>
    <string name="telefonoEditText">Telefono</string>
    <string name="direccionEditText">Direccion</string>
    <string name="buttonGuardar">Guardar</string>
    <string name="imageViewButton">Tomar foto</string>
    <string name="imageViewText">Image view image text description</string>
</resources>