<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityCreate">

    <ImageView
        android:id="@+id/imageView"
        android:contentDescription="@string/imageViewText"
        android:layout_width="match_parent"
        android:layout_height="200dp" />

    <Button
        android:id="@+id/imgaeViewButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/imageViewButton" />

    <EditText
        android:id="@+id/nombreEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:autofillHints="nombre"
        android:inputType="text"
        android:hint="@string/nombreEditText"
        android:text="@string/nombreEditText" />

    <EditText
        android:id="@+id/apellidoEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:autofillHints="apellido"
        android:inputType="text"
        android:hint="@string/apellidoEditText"
        android:text="@string/apellidoEditText" />

    <EditText
        android:id="@+id/telefonoEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:autofillHints="telefono"
        android:inputType="text"
        android:hint="@string/telefonoEditText"
        android:text="@string/telefonoEditText" />

    <EditText
        android:id="@+id/direccionEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:autofillHints="direccion"
        android:inputType="text"
        android:hint="@string/direccionEditText"
        android:text="@string/direccionEditText" />

    <Button
        android:id="@+id/buttonGuardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonGuardar" />
</LinearLayout>